# squeezeformer-ukrainian

./: .gitignore  README.md  benchmark.py  evaluate.py  export_cv22_corpus.py  extract_features.py  hparam_tuner.py  inference.py  pyproject.toml  quantize.py  requirements-train.txt  train.py  train_lm.py  wav2vec2-bert.md
.github/workflows/: build-asr-features.yml  build-rust-feature-cache-warmer.yml
feature_cache_warmer/: __init__.py  __main__.py  cli.py
paraformer_pytorch/: __init__.py  _ctc_alignment_cuda.cpp  _ctc_alignment_cuda_kernel.cu  _ctc_alignment_cython.pyx  _ctc_alignment_python.py  _ctc_alignment_triton.py  asr.py  better_model.py  ctc_alignment.py  model.py
paramormer_pytorch/: __init__.py  asr.py
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: arrow_utils.rs  audio.rs  cache.rs  cli.rs  dsp.rs  feature_cache.rs  frontend.rs  lib.rs  main.rs  python.rs  tests.rs  util.rs
rust_feature_cache_warmer/: Cargo.toml  README.md  pyproject.toml
rust_feature_cache_warmer/src/: audio.rs  feature_cache.rs  feature_loader.rs  frontend.rs  lib.rs  main.rs  record_cache.rs  tests.rs
scripts/: benchmark_pyptx_kernels.py  extract_architecture_weights.py  inspect_checkpoint.py  redact_hf_secrets.py  reproduce_nccl_barrier_cuda_driver.py  smoke_resume_train.py
squeezeformer_pytorch/: __init__.py  asr.py  checkpoints.py  data.py  evaluation_runtime.py  frontend.py  inference_runtime.py  lm.py  masking.py  metrics.py  model.py  pyptx_kernels.py  runtime_types.py  secrets.py
squeezeformer_pytorch/common/: __init__.py  feature_cache_warmer.py
squeezeformer_pytorch/jax/: README.md  __init__.py  model.py  train.py  training.py
squeezeformer_pytorch/training/: cli.py  data_loading.py  evaluation.py  feature_cache_warmer.py  runtime.py  torchrun_launcher.py
tests/: test_benchmark.py  test_evaluate.py  test_feature_cache_warmer.py  test_hparam_tuner.py  test_inference.py  test_paraformer_training.py  test_pyptx_kernels.py  test_rust_feature_extension.py  test_squeezeformer.py  test_torchrun_launcher.py  test_training_cli.py  test_training_data_loading.py  test_training_evaluation.py  test_w2v_bert_training.py  test_zipformer_training.py
w2v_bert/: asr.py
zipformer_pytorch/: asr.py  fp8.py  optim.py  transducer.py
zipformer_pytorch/zipformer/: zipformer.py
