[project]
name = "squeezeformer-pytorch"
version = "0.1.0"
description = "PyTorch implementation of the Squeezeformer encoder"
requires-python = ">=3.14"
dependencies = [
    "gradio>=5.38.0",
    "huggingface-hub>=0.34.0",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
]

[project.optional-dependencies]
train = [
    "jiwer>=4.0.0",
    "nvidia-npp>=13.1.0.44",
    "polars>=1.30.0",
    "torchcodec>=0.11.0",
    "trackio>=0.20.2",
    "transformer-engine[pytorch]>=2.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
