[project]
name = "squeezeformer-pytorch"
version = "0.1.0"
description = "PyTorch implementation of the Squeezeformer encoder"
requires-python = ">=3.12"
dependencies = [
    "audioflux>=0.1.9",
    "gradio>=5.38.0",
    "huggingface-hub>=0.34.0",
    "kernels>=0.12.3",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.0",
    "torch",
    "torchaudio",
    "torchcodec>=0.11.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[project.optional-dependencies]
jax = [
    "flax>=0.11.0",
    "jax>=0.6.0",
    "optax>=0.2.5",
    "orbax-checkpoint>=0.11.0",
]
quantize = [
    "torchao>=0.16.0",
]
fp8 = [
    "transformer-engine[pytorch]>=2.13.0",
]
train = [
    "pytorch-optimizer>=3.10.0",
    "jiwer>=4.0.0",
    "nvidia-npp>=13.1.0.44",
    "polars[rtcompat]>=1.39.3",
    "torchcodec>=0.11.0",
    "trackio>=0.20.2",
    "transformers>=4.57.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
