[project]
name = "squeezeformer-pytorch"
version = "0.1.0"
description = "PyTorch implementation of the Squeezeformer encoder"
requires-python = ">=3.12"
dependencies = [
    "asr-features>=0.1.0",
    "gradio>=5.38.0",
    "huggingface-hub>=0.34.0",
    "pyptx[torch]>=0.1.0",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.0",
    "torch>=2.9.0,<=2.11.0",
    "torchaudio>=2.9.0,<=2.11.0",
    "torchcodec>=0.10.0",
]

[project.scripts]
squeezeformer-torchrun = "squeezeformer_pytorch.training.torchrun_launcher:main"

[tool.setuptools.packages.find]
include = ["squeezeformer_pytorch*", "w2v_bert*", "zipformer_pytorch*", "paraformer_pytorch*", "paramormer_pytorch*"]
namespaces = true

[tool.uv]
conflicts = [
    [
        { group = "cu126" },
        { group = "cu12" },
        { group = "cu13" },
    ],
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
asr-features = { path = "rust" }
torch = [
    { index = "pytorch-cu126", group = "cu126" },
    { index = "pytorch-cu128", group = "cu12" },
    { index = "pytorch-cu130", group = "cu13" },
]
torchaudio = [
    { index = "pytorch-cu126", group = "cu126" },
    { index = "pytorch-cu128", group = "cu12" },
    { index = "pytorch-cu130", group = "cu13" },
]

[project.optional-dependencies]
jax = [
    "flax>=0.11.0",
    "jax>=0.6.0",
    "optax>=0.2.5",
    "orbax-checkpoint>=0.11.0",
]
quantize = [
    "torchao>=0.16.0",
]
fp8 = [
    "transformer-engine[pytorch]>=2.13.0",
]
train = [
    "pytorch-optimizer>=3.10.0",
    "jiwer>=4.0.0",
    "polars[rtcompat]>=1.39.3",
    "torchcodec>=0.10.0",
    "trackio>=0.20.2",
    "transformers>=4.57.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
cu126 = [
    "nvidia-npp-cu12>=12.4.1.87",
    "torch>=2.10.0,<2.11.0",
    "torchaudio>=2.10.0,<2.11.0",
    "torchcodec>=0.10.0,<0.11.0",
]
cu12 = [
    "nvidia-npp-cu12>=12.4.1.87",
    "torch>=2.9.0,<=2.11.0",
    "torchaudio>=2.9.0,<=2.11.0",
]
cu13 = [
    "nvidia-npp>=13.1.0.44",
    "torch>=2.9.0,<=2.11.0",
    "torchaudio>=2.9.0,<=2.11.0",
]
