[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "asr-features"
version = "0.1.0"
description = "PyO3 bindings for ASR feature extraction frontends"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]

[tool.maturin]
features = ["python"]
module-name = "asr_features"
