[package]
name = "feature-cache-warmer"
version = "0.1.0"
edition = "2021"
description = "Rust parquet-to-feature-cache warmer"
license = "MIT"

[dependencies]
anyhow = "1.0"
audioadapter-buffers = "3.0"
arrow = "56"
clap = { version = "4.5", features = ["derive"] }
parquet = { version = "56", features = ["arrow"] }
rayon = "1.11"
rubato = "2.0"
rustfft = "6.4"
sha2 = "0.10"
symphonia = { version = "0.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = "symbols"
